<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">


     <TextView
        android:id="@+id/colorSwatch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:height="200dp"
        android:background="#000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/colorSwatch"
        android:labelFor="@+id/hueSB"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/hue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"/>

    <FrameLayout
        android:id="@+id/hueLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hue"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

    <ImageView
        android:id="@+id/hueGradient"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:contentDescription="@string/hue"
        android:scaleType="fitXY"
        android:src="@drawable/gradient_hue" />

    <SeekBar
        android:id="@+id/hueSB"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:max="359" />
    </FrameLayout>

    <TextView
        android:id="@+id/saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hueLayout"
        android:labelFor="@+id/saturationSB"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/saturation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        />

    <FrameLayout
        android:id="@+id/saturationLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturation"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <ImageView
            android:id="@+id/saturationGradient"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:contentDescription="@string/saturation"
            android:scaleType="fitXY"
            android:src="@drawable/gradient_saturation" />

        <SeekBar
            android:id="@+id/saturationSB"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:max="100" />
    </FrameLayout>

    <TextView
        android:id="@+id/brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saturationLayout"
        android:labelFor="@+id/valueSB"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/brightness"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        />

    <FrameLayout
        android:id="@+id/brightnessLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brightness"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <ImageView
            android:id="@+id/brightnessGradient"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:contentDescription="@string/brightness"
            android:scaleType="fitXY"
            android:src="@drawable/gradient_brightness" />

        <SeekBar
            android:id="@+id/brightnessSB"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:max="100" />
    </FrameLayout>
    
    <HorizontalScrollView
        android:id="@+id/horizonScroll"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:scrollbars="horizontal"
        android:layout_below="@+id/brightnessLayout"
        >

        <LinearLayout
            android:id="@+id/colorButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/blackButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/black"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/redButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/red"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/limeButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/lime"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/blueButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/blue"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/yellowButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/yellow"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/cyanButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/cyan"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/magentaButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/magenta"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/silverButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/silver"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/grayButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/gray"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/maroonButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/maroon"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/oliveButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/olive"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/greenButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/green"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/purpleButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/purple"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/tealButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/teal"
                android:onClick="colorBtn"
                />

            <Button
                android:id="@+id/navyButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:background="@color/navy"
                android:onClick="colorBtn"
                />

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>

    




